--- a/material/partials/copyright.html
+++ b/material/partials/copyright.html
@@ -8,9 +8,10 @@
     </div>
   {% endif %}
   {% if not config.extra.generator == false %}
-    Made with
-    <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
-      Material for MkDocs
+    Power by 
+    <a href="https://cypress0522.github.io" target="_blank" rel="noopener">
+      简律纯
     </a>
+    ₍˄·͈༝·͈˄*₎◞ ̑̑
   {% endif %}
 </div>
