--- a/material/overrides/partials/content.html
+++ b/material/overrides/partials/content.html
@@ -39,5 +39,5 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
 {{ page.content }}
 
 {% if git_page_authors %}
-  <p><small>Authors: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}</small></p>
+  <p><small>作者: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}</small></p>
 {% endif %}
