--- a/material/partials/content.html
+++ b/material/partials/content.html
@@ -19,4 +19,14 @@
 ) %}
   {% include "partials/source-file.html" %}
 {% endif %}
+{% if page.meta.source %}
+    <div class="source-links">
+    {% for filename in page.meta.source %}
+        <span class="label label-primary">{{ filename }}</span>
+    {% endfor %}
+    </div>
+{% endif %}
+{% if git_page_authors %}
+  <p><small>作者: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}</small></p>
+{% endif %}
 {% include "partials/feedback.html" %}
