--- a/material/partials/content.html
+++ b/material/partials/content.html
@@ -27,6 +27,6 @@
     </div>
 {% endif %}
 {% if git_page_authors %}
-  <p><small>作者: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}</small></p>
+  <p><small>贡献者: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}</small></p>
 {% endif %}
 {% include "partials/feedback.html" %}
