--- a/material/partials/copyright.html
+++ b/material/partials/copyright.html
@@ -9,7 +9,7 @@
   {% endif %}
   {% if not config.extra.generator == false %}
     Power by 
-    <a href="https://cypress0522.github.io" target="_blank" rel="noopener">
+    <a href="https://github.com/HsiangNianian" target="_blank" rel="noopener">
       纯子
     </a>
     ₍˄·͈༝·͈˄*₎◞ ̑̑
